<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_weather2"
    android:id="@+id/FrameLayout1">

    <TextView
        android:id="@+id/TextView_Fragment_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_Title_Here"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/TextView_Fragment_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_Date_Here"
        android:layout_below="@id/TextView_Fragment_Title"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/TextView_Fragment_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show_ID"
        android:textSize="20dp"
        android:layout_below="@+id/TextView_Fragment_Date"
        />

    <ImageView
        android:id="@+id/Image_Fragment_Image"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="300dp"/>
    <Button
        android:id="@+id/Button_Fragment_Hide_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/Prompt_Hide" />

</RelativeLayout>