<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/background_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/space_header_resized"
        >
<!--        android:background="@mipmap/ic_launcher"-->

<!--        android:background="@drawable/space_header">-->

        <ImageView
            android:id="@+id/bunnyImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/nasa_trans" />

        <TextView
            android:id="@+id/TextView_Header_Editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bunnyImg"
            android:layout_centerInParent="true"
            android:text="@string/Show_Activity_Currently"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/TextView_Header_Nav_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@id/TextView_Header_Nav_3"
            android:text="@string/Author_1"
            android:textSize="10dp"
            android:textColor="@color/white"

            />
        <TextView
            android:id="@+id/TextView_Header_Nav_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/Author_2"
            android:textSize="10dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_Header_Nav_4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="10dp"
            />
    </RelativeLayout>

</RelativeLayout>