<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <TextView
            android:id="@+id/TextView_Random_Intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ToolBar_ID"
            android:layout_centerInParent="true"
            android:text="@string/Show_Random_Intro"
            android:textSize="20dp" />

        <Button
            android:id="@+id/Button_Random_Lucky_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView_Random_Intro"
            android:layout_centerInParent="true"
            android:text="@string/im_feeling_lucky" />

        <Button
            android:id="@+id/Button_Random_Save_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button_Random_Lucky_Button"
            android:layout_centerInParent="true"
            android:text="@string/Show_Text_Save"/>

        <TextView
            android:id="@+id/TextView_Random_Title_Editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_below="@id/Button_Random_Save_Button"
            android:layout_centerHorizontal="true"
            android:text="@string/Show_Text_Image_Of_Day"
            />

        <TextView
            android:id="@+id/TextView_Random_Date_Editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Image_Random_Image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/yyyy_mm_dd"
            />

        <ImageView
            android:id="@+id/Image_Random_Image"
            android:layout_width="200dp"
            android:layout_height="210dp"
            android:layout_marginTop="100dp"
            android:layout_below="@id/Button_Random_Save_Button"
            android:layout_centerHorizontal="true"
            />

        <ProgressBar
            android:id="@+id/Progress_Random_Progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />


    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/Nav_View"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"

        />


</androidx.drawerlayout.widget.DrawerLayout>